--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,23 @@
-cmake_minimum_required(VERSION 2.8)
+# ------------------------------------------------------------------------------
+#
+# Copyright 2016 The Charon Platform Authors.
+#
+# All rights reserved.
+# Use of this source code is governed by a BSD-style
+# license that can be found in the LICENSE file.
+#
+# ------------------------------------------------------------------------------
 
-set(CXX_FLAGS
-    -g
-    -Wall
-    -std=c++11
-    -D_PTHREADS
-    -Wno-unused-parameter
-    -O2
-    -finline-functions
+include_directories(.)
+include_directories(${PROJECT_SOURCE_DIR}/include)
+include_directories(${PROJECT_SOURCE_DIR}/deps/include)
+include_directories(${PROJECT_SOURCE_DIR}/src/lua/json)
+
+file(GLOB src src1/*.cpp)
+
+add_executable(
+    enceladus
+    ${src}
 )
 
-add_subdirectory(src1)
+target_link_libraries( miranda lua charon )
